# aws-agents-ai-matic-careflow

./: README.md  lol.md
backend/: .env.example  main.py  pyproject.toml  ui.py
backend/app/: agents.py  mcp_client.py  models.py  prompts.py  tool_registery.json  tools.py  utils.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: ChatScreen.jsx  HomeScreen.jsx  Layout.jsx  MessageBubble.jsx  Navbar.jsx  ReportMarkdown.jsx  StepLoader.jsx  WorkFlowDiagram.jsx  Workflow.jsx
ui/src/pages/: Custom.jsx  Home.jsx  Login.jsx  Register.jsx  Registry.jsx  WorkflowSchedular.jsx
ui/src/services/: api.js  auth.js  workflow.js
