[project]
name = "aws-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.7",
    "bedrock-agentcore-starter-toolkit>=0.1.24",
    "fastapi>=0.118.0",
    "python-dotenv>=1.1.1",
    "strands-agents>=1.10.0",
    "strands-agents-tools>=0.2.9",
    "streamlit>=1.50.0",
]
